@@ -122,18 +122,12 @@ class UOWTransaction(object):
         else:
             return history.as_state()
 
-    def register_object(self, state, isdelete=False, listonly=False, postupdate=False, post_update_cols=None):
+    def register_object(self, state, isdelete=False, 
+                            listonly=False, postupdate=False, post_update_cols=None):
         
         # if object is not in the overall session, do nothing
         if not self.session._contains_state(state):
-            if self._should_log_debug:
-                self.logger.debug("object %s not part of session, not registering for flush",
-                                        mapperutil.state_str(state))
             return
-
-        if self._should_log_debug:
-            self.logger.debug("register object for flush: %s isdelete=%s listonly=%s postupdate=%s",
-                                    mapperutil.state_str(state), isdelete, listonly, postupdate)
 
         mapper = _state_mapper(state)
 
@@ -256,11 +250,10 @@ class UOWTransaction(object):
                 break
 
         tasks = self._sort_dependencies()
-        if self._should_log_info:
+        if self._should_log_info():
             self.logger.info("Task dump:\n%s", self._dump(tasks))
         UOWExecutor().execute(self, tasks)
-        if self._should_log_info:
-            self.logger.info("Execute Complete")
+        self.logger.info("Execute Complete")
 
     def _dump(self, tasks):
         from uowdumper import UOWDumper
@@ -296,16 +289,14 @@ class UOWTransaction(object):
         for item, cycles in nodes:
             task = self.get_task_by_mapper(item)
             if cycles:
-                for t in task._sort_circular_dependencies(self, [self.get_task_by_mapper(i) for i in cycles]):
+                for t in task._sort_circular_dependencies(
+                                        self, 
+                                        [self.get_task_by_mapper(i) for i in cycles]
+                                        ):
                     ret.append(t)
             else:
                 ret.append(task)
 
-        if self._should_log_debug:
-            self.logger.debug("Dependent tuples:\n" + "\n".join(
-                    "(%s->%s)" % (d[0].class_.__name__, d[1].class_.__name__)
-                    for d in self.dependencies))
-            self.logger.debug("Dependency sort:\n%s", ret)
         return ret
 
 log.class_logger(UOWTransaction)
