@@ -343,7 +343,7 @@ class ZooMarkTest(TestBase):
     def test_profile_4_expressions(self):
         self.test_baseline_4_expressions()
 
-    @profiling.function_call_count(1241, {'2.4': 854})
+    @profiling.function_call_count(1311, {'2.4': 854})
     def test_profile_5_aggregates(self):
         self.test_baseline_5_aggregates()
 
